apps/zAcademy/infra/kubernetes/payment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment
  labels:
    name: payment
    pod-security.kubernetes.io/enforce: restricted
