apps/zAcademy/infra/kubernetes/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: payment
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
